CHANNELMGR-2381 Reduce resize handle width to prevent overlapping with a scroll bar

--- a/channel-manager/frontend-ng/src/app/channel/sidePanels/resizeHandle/resizeHandle.scss
+++ b/channel-manager/frontend-ng/src/app/channel/sidePanels/resizeHandle/resizeHandle.scss
@@ -28,6 +28,7 @@ resize-handle {
 
   &.right {
     right: 0;
+    width: 5px;
   }
 }
 
